Fixed overflow-y

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -18,7 +18,7 @@
     padding: 1rem;
     padding-bottom: 10rem;
     box-shadow: 0px 6px 20px 1px rgba(46, 46, 46, 0.527);
-    overflow-y: scroll !important;
+    overflow-y: hidden !important;
 
     animation: cart-a 0.1s ease-in-out;
 }
